src/client/css/app.css
@keyframes loaderSpin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}
@keyframes copiedMsg {
  0% { opacity: 0; }
  10%,
  40% { opacity: 1; }
  100% { opacity: 0; }
}

@font-face {
  font-family: 'MonoFont';
  src: url('PTMono-Regular.ttf') format('truetype');
}

:root {
  --credCardWidth: 450px;
  --copiedMsgDuration: 2000ms;
  --color__cardBorders: #999;
  --color__credsBodyBG: 238, 238, 238;
}

*, *::before, *::after {
  box-sizing: border-box;
}

html, body {
  font: 16px Helvetica, Arial, sans-serif;
  padding: 0;
  margin: 0;
}

form {
  padding: 1em;
  margin: 0;
}
form > *:not(:last-child) {
  margin-bottom: 1em;
}
form button,
form input {
  font-size: 1em;
}
form button {
  color: #fff;
  width: 100%;
  padding: 0.75em 1em;
  border: none;
  border-radius: 0;
  background: #000;
}
form button:disabled {
  opacity: 0.5;
}

button:not(:disabled) {
  cursor: pointer;
}

.spinner {
  content: '';
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}
.spinner::before {
  content: '';
  width: 100%;
  height: 100%;
  border: solid 5px rgba(0, 0, 0, 0.15);
  border-bottom-color: #000;
  border-radius: 100%;
  background: transparent;
  display: block;
  animation: loaderSpin 350ms infinite linear;
  opacity: 0.25;
}

.hr-with-text {
  font-weight: bold;
  text-align: center;
  position: relative;
  z-index: 0;
}
.hr-with-text::before {
  content: '';
  width: 100%;
  height: 1px;
  background: currentColor;
  position: absolute;
  top: 50%;
  left: 0;
  z-index: -1;
}
.hr-with-text > * {
  padding: 0 1em;
  background: #eeeeee;
}

.help-text {
  color: rgba(0 ,0, 0, 0.5);
  font-size: 0.75em;
  margin: 0.5em 0;
}

.labeled-input input {
  width: var(--labeled-input__input-width, auto);
  padding: 0.5em;
  margin-left: 0.5em;
  border: solid 1px;
  border-radius: 0.25em;
}
.labeled-input input:is(:focus, :focus-visible) {
  outline: solid 2px;
  outline-offset: -2px;
}
.labeled-input input:required {
  padding: 0.5em 1.75em 0.5em 0.5em;
}
.labeled-input input:required ~ svg {
  color: #ff7600;
  font-size: 1em;
  position: absolute;
  top: 50%;
  right: 0.5em;
  transform: translateY(-50%);
}
.labeled-input__wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  flex-direction: row-reverse;
  position: relative;
}
.labeled-input__deletable {
  width: var(--labeled-input__input-width, auto);
  margin-left: 0.5em;
  display: flex;
}
.labeled-input__deletable input {
  border-radius: 0.25em 0 0 0.25em;
  margin: 0;
}
.labeled-input__deletable button {
  border-radius: 0 0.25em 0.25em 0;
  transition: background-color 300ms;
}
.labeled-input__deletable button:hover {
  background-color: #7e0e3e;
}

#createConfig {
  max-width: 360px;
}

.remember-me {
  text-align: right;
  user-select: none;
  cursor: pointer;
  display: block;
}

#createAccount nav {
  display: flex;
}
#createAccount nav button:not(:first-of-type) {
  margin-left: 0.75em;
}

custom-dialog button {
  color: #fff;
  width: 100%;
  padding: 0.75em 1em;
  border: none;
  border-radius: 0.25em;
  background: #000;
}

.doors {
  width: 100%;
  height: 100%;
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  user-select: none;
  pointer-events: none;
  z-index: 10;
}
.doors::before,
.doors::after {
  content: '';
  width: 50%;
  height: 100%;
  display: inline-block;
  transition: transform 500ms;
}
.doors::before {
  background: linear-gradient(90deg, #c0c0c0 90%, #949494 94%, #c0c0c0 95%, #c0c0c0 99%, #adadad 100%);
}
.doors::after {
  background: linear-gradient(270deg, #c0c0c0 90%, #949494 94%, #c0c0c0 95%, #c0c0c0 99%, #adadad 100%);
}
.doors.open::before {
  transform: translateX(-100%);
}
.doors.open::after {
  transform: translateX(100%);
}

.credentials {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.credentials__top-nav {
  background: #ccc;
  box-shadow: 0 -2rem 2rem 2rem rgba(0, 0, 0, 0.75);
  display: flex;
  justify-content: center;
  position: relative;
  z-index: 5;
}

.no-creds-msg {
  padding: 1em;
  border: solid 1px #aaa;
  border-radius: 0.5em;
  box-shadow: 0 9px 15px 0px rgba(0, 0, 0, 0.25);
  background: #fff;
  display: none;
  position: absolute;
  top: 25%;
  left: 50%;
  transform: translateX(-50%);
}

.load-progress-indicator {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: 10;
  opacity: 0;
  transition: opacity 300ms;
  pointer-events: none;
}
.load-progress-indicator::before {
  content: '';
  width: 100%;
  height: 100%;
  background-color: rgba(var(--color__credsBodyBG), 0.8);
  display: block;
}
.load-progress-indicator__wrapper {
  width: 12em;
  height: 12em;
  font-family: 'MonoFont', monospace;
  border-radius: 100%;
  background: rgb(var(--color__credsBodyBG));
  position: absolute;
  top: 40%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  align-items: center;
  justify-content: center;
}
.load-progress-indicator__progress-svg {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
.load-progress-indicator__progress-svg circle {
  fill: none;
  stroke-width: 3;
  stroke-linecap: round;
  transform: rotate(-90deg) scale(0.9);
  transform-origin: center;
}
.load-progress-indicator__progress-svg circle.is--path {
  stroke: #cacaca;
}
.load-progress-indicator__progress-svg circle.is--fill {
  --maxRadius: 315;
  --currRadius: 315;
  
  stroke: #00a6ff;
  stroke-dasharray: var(--maxRadius);
  stroke-dashoffset: var(--currRadius);
}
.credentials.is--loading .load-progress-indicator {
  opacity: 1;
  pointer-events: all;
}

.credentials__body {
  height: 100%;
  overflow: hidden;
  background-color: rgb(var(--color__credsBodyBG));
  position: relative;
}
.credentials__body.has--no-credentials .no-creds-msg {
  display: block;
}
.credentials__body.has--no-credentials .credentials__filter-input {
  display: none;
}
.credentials__body:not(.have--loaded) .credentials__list {
  display: none;
}

.credentials__list {
  height: 100%;
  padding: 1em 0 2em;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.credentials__filter-input-wrapper {
  position: sticky;
  top: 0;
  z-index: 1;
}
.credentials__filter-input {
  width: var(--credCardWidth);
  margin-bottom: 3em;
  padding: 1em;
  padding-right: 3.5em;
  border: solid 1px var(--color__cardBorders);
  box-shadow: 0 0 10px 32px rgb(var(--color__credsBodyBG));
}
.credentials__clear-filter-btn {
  font-size: 1.5em;
  padding: 0.4em;
  border: none;
  background: transparent;
  position: absolute;
  right: 0;
  transition: opacity 300ms;
}
.credentials__clear-filter-btn * {
  pointer-events: none;
}
.credentials__clear-filter-btn:disabled {
  opacity: 0;
  pointer-events: none;
}

.credentials__letter-sep {
  text-align: left;
  margin: 1em 0;
  padding-left: 1em;
  opacity: 0.5;
}
.credentials__letter-sep:first-of-type {
  margin-top: 0;
}
.credentials__letter-sep > * {
  background-color: rgb(var(--color__credsBodyBG));
}

.credentials-card {
  width: var(--credCardWidth);
  padding: 0.5em 1em 3em;
  border: solid 1px var(--color__cardBorders, currentColor);
  border-radius: 0.25em;
  background: #fff;
  box-shadow: 0 2px 3px 1px rgba(0, 0, 0, 0.25);
  position: relative;
  overflow: hidden;
  flex-shrink: 0;
}
.credentials-card:not(:first-child) {
  margin-top: 1em;
}
.credentials-card__label {
  font-weight: bold;
  text-transform: capitalize;
  line-height: 2em;
  border-bottom: solid 1px var(--color__cardBorders, currentColor);
  margin-bottom: 1em;
}
.credentials-card__list-item {
  width: 100%;
  font-size: 1em;
  text-align: left;
  padding: 0;
  border: solid 1px var(--color__cardBorders);
  background: transparent;
  cursor: pointer;
  display: flex;
  align-items: stretch;
  position: relative;
}
.credentials-card__list-item.copied::after {
  content: 'Copied';
  width: 100%;
  height: 100%;
  color: #045d80;
  font-weight: bold;
  padding: 0.5em;
  background: #b1ffb1;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 0;
  left: 0;
  animation: copiedMsg var(--copiedMsgDuration);
  animation-fill-mode: forwards;
}
.credentials-card__list-item:not(:first-child) {
  margin-top: 0.5em;
}
.credentials-card__list-item * {
  user-select: none;
  pointer-events: none;
}
.credentials-card__list-item-column {
  overflow: hidden;
  max-width: 100%;
  flex: 1;
}
.credentials-card__list-item-column label,
.credentials-card__list-item-value {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding: 0.5em;
}
.credentials-card__list-item-column label {
  color: var(--color__cardBorders);
  font-weight: bold;
  text-transform: capitalize;
  display: block;
}
.credentials-card__list-item-value {
  font-family: 'MonoFont', monospace;
  font-size: 14px;
  text-align: center;
  border-top: dashed 1px var(--color__cardBorders);
}
.has--hidden-values .credentials-card__list-item-value span {
  filter: blur(4px);
}
.credentials-card__clipboard-icon {
  padding: 0 0.25em;
  border-left: dashed 1px var(--color__cardBorders);
  background-color: rgb(var(--color__credsBodyBG));
  display: flex;
  align-items: center;
}
.credentials-card__ui {
  border-top: solid 1px var(--color__cardBorders, currentColor);
  display: flex;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
}
.credentials-card__ui button {
  width: 100%;
  padding: 0.5em;
  border: none;
  background: transparent;
}
.credentials-card__ui button:hover {
  color: #fff;
  background: #333;
}
.credentials-card__ui button:not(:first-of-type) {
  border-left: solid 1px var(--color__cardBorders, currentColor);
}
.credentials-card__ui button[value="delete"] {
  width: 32%;
}

.creds-form {
  --labeled-input__delete-btn-width: 2em;
  --labeled-input__input-width: 270px;
  
  padding: 1em;
}
.creds-form__inputs {
  max-height: calc(100vh - 260px);
  overflow-x: hidden;
  overflow-y: auto;
}
.creds-form__inputs > *:not(:last-child) {
  margin-bottom: 0.25em;
}
.creds-form__inputs input {
  font-family: 'MonoFont', monospace;
}
#addCustomCred {
  width: 100%;
  color: #000;
  border: solid 1px;
  background: #eee;
}

form.input-creator-form > * {
  margin: 0;
}
.input-creator {
  padding: 0.5em;
  border: dotted 1px;
  background: rgba(187, 249, 200, 0.6);
}
.input-creator nav {
  margin-top: 0.5em;
  display: flex;
}
.input-creator button {
  color: #333;
  border: solid 1px;
  background-color: transparent;
  transition: background-color 200ms;
}
.input-creator button:hover {
  background-color: rgba(255, 255, 255, 0.75);
}
.input-creator button:first-child {
  border-right: none;
  border-radius: 0.25em 0 0 0.25em;
}
.input-creator button:last-child {
  border-radius: 0 0.25em 0.25em 0;
}
.input-creator input {
  width: 100%;
  padding: 0.5em;
  border: solid 1px #8c8c8c;
  border-radius: 0.25em;
  background: #fff;
}
#addCustomCred.is--hidden,
.input-creator.is--hidden {
  display: none;
}

.segmented-dialog-nav {
  display: flex;
}
.segmented-dialog-nav button {
  color: #000;
  border: solid 1px;
  background: transparent;
}
.segmented-dialog-nav button:hover:not(:disabled) {
  color: #fff;
  background: #000;
}
.segmented-dialog-nav button:not(:first-child) {
  margin-left: 0.5em;
}

.delete-confirmation__msg {
  margin-top: 0;
}

